--- a/0-Secret_Management.ipynb
+++ b/0-Secret_Management.ipynb
@@ -17,6 +17,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "5b39ec23-fdbd-4398-8bf2-ce86911547df",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "# REST API:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "7256bafc-2089-4f50-bb2b-cb6d52f573e2",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import os\n",
+    "from databricks.sdk import WorkspaceClient\n",
+    "\n",
+    "# Databricks workspace and authentication details\n",
+    "DATABRICKS_INSTANCE = dbutils.notebook.entry_point.getDbutils().notebook().getContext()\\\n",
+    "                                                            .apiUrl().getOrElse(None)  # Replace with your Databricks workspace URL\n",
+    "TOKEN = dbutils.notebook.entry_point.getDbutils().notebook().getContext()\\\n",
+    "                                                            .apiToken().getOrElse(None)  # Replace with your Databricks personal access token or the service principal that can make api calls\n",
+    "\n",
+    "# Set the environment variables for authentication\n",
+    "os.environ['DATABRICKS_HOST'] = DATABRICKS_INSTANCE\n",
+    "os.environ['DATABRICKS_TOKEN'] = TOKEN"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -34,14 +83,6 @@
    },
    "outputs": [],
    "source": [
-    "import requests\n",
-    "\n",
-    "# Databricks workspace and authentication details\n",
-    "DATABRICKS_INSTANCE = dbutils.notebook.entry_point.getDbutils().notebook().getContext()\\\n",
-    "                                                            .apiUrl().getOrElse(None)  # Replace with your Databricks workspace URL\n",
-    "TOKEN = dbutils.notebook.entry_point.getDbutils().notebook().getContext()\\\n",
-    "                                                            .apiToken().getOrElse(None)  # Replace with your Databricks personal access token or the service principal that can make api calls\n",
-    "\n",
     "# API endpoint\n",
     "url = f\"{DATABRICKS_INSTANCE}/api/2.0/secrets/scopes/create\"\n",
     "\n",
@@ -145,25 +186,6 @@
     "    print(f\"Secret scope deleted successfully!\")\n",
     "else:\n",
     "    print(f\"Error: {response.status_code}, {response.text}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
-     "inputWidgets": {},
-     "nuid": "7bb332b4-61f4-4998-947d-a48cb77d8609",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "CLIENT_ID = \"83988469-aba5-4d3d-bcad-f8707acc74cd\"\n",
-    "CLIENT_SECRET = \"dose1f2a6b5faf019bee3eb6e0514794d83b\""
    ]
   },
   {
