clean up commit

--- a/0-Secret_Management.ipynb
+++ b/0-Secret_Management.ipynb
@@ -206,11 +206,9 @@
    },
    "outputs": [],
    "source": [
-    "from databricks.sdk import WorkspaceClient\n",
-    "\n",
     "w = WorkspaceClient()\n",
     "\n",
-    "w.secrets.put_secret(\"cog_system\",\"accnt_admin_sp\",string_value =\"dose1f2a6b5faf019bee3eb6e0514794d83b\")"
+    "w.secrets.put_secret(\"cog_system\",\"accnt_admin_sp\",string_value =\"<my_secret_id>\")"
    ]
   },
   {
